language/move-lang/tests/move_check/typing/mutable_borrow_from_immutable.exp
error: 

   ┌── tests/move_check/typing/mutable_borrow_from_immutable.move:6:9 ───
   │
 6 │         &mut (&s).v;
   │         ^^^^^^^^^^^ Invalid mutable borrow from an immutable reference
   │              ---- Immutable because of this position
   │

error: 

   ┌── tests/move_check/typing/mutable_borrow_from_immutable.move:7:9 ───
   │
 7 │         &mut (&s.x).f;
   │         ^^^^^^^^^^^^^ Invalid mutable borrow from an immutable reference
   │              ------ Immutable because of this position
   │

error: 

    ┌── tests/move_check/typing/mutable_borrow_from_immutable.move:8:20 ───
    │
  8 │         let sref = &s;
    │                    -- Immutable because of this position
  9 │         let xref = &s.x;
 10 │         &mut sref.v;
    │         ^^^^^^^^^^^ Invalid mutable borrow from an immutable reference
    │

error: 

    ┌── tests/move_check/typing/mutable_borrow_from_immutable.move:9:20 ───
    │
  9 │         let xref = &s.x;
    │                    ---- Immutable because of this position
 10 │         &mut sref.v;
 11 │         &mut xref.v;
    │         ^^^^^^^^^^^ Invalid mutable borrow from an immutable reference
    │

error: 

    ┌── tests/move_check/typing/mutable_borrow_from_immutable.move:11:14 ───
    │
 11 │         &mut xref.v;
    │              ^^^^^^ Unbound field 'v' in '0x8675309::M::X'
    │

error: 

    ┌── tests/move_check/typing/mutable_borrow_from_immutable.move:14:22 ───
    │
 14 │     fun t2(s: &S, x: &X) {
    │                      -- Immutable because of this position
 15 │         x.f = x.f + 1;
    │         ^^^ Invalid mutable borrow from an immutable reference
    │

error: 

    ┌── tests/move_check/typing/mutable_borrow_from_immutable.move:14:15 ───
    │
 14 │     fun t2(s: &S, x: &X) {
    │               -- Immutable because of this position
 15 │         x.f = x.f + 1;
 16 │         s.x.f = s.x.f + 1
    │         ^^^^^ Invalid mutable borrow from an immutable reference
    │

